--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Portfolio</title>
+    <title>Miloszekxxd's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,10 +12,10 @@
             <div class="profile">
                 <div class="avatar">
                     <!-- Placeholder avatar circle with initials -->
-                    <div class="avatar-circle">SP</div>
+                    <div class="avatar-circle">MD</div>
                 </div>
                 <div class="status-indicator online"></div>
-                <h1>Space Person</h1>
+                <h1>miloszekxxd</h1>
                 <p class="subtitle">Cosmic Developer</p>
             </div>
         </header>
@@ -65,8 +65,8 @@
             <h2>Contact</h2>
             <div class="social-links">
                 <a href="#" class="social-link">GitHub</a>
-                <a href="#" class="social-link">LinkedIn</a>
                 <a href="#" class="social-link">Twitter</a>
+                <a href="#" class="social-link">Discord</a>
             </div>
         </section>
     </div>
