--- a/Discord-Web/index.html
+++ b/Discord-Web/index.html
@@ -1,128 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TCP Chat UI</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Discord Web</title>
   <style>
+    /* Add your styling here */
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #2f3136;
-      color: #fff;
-      display: flex;
-      height: 100vh;
+      font-family: Arial, sans-serif;
     }
-    .sidebar {
-      width: 250px;
-      background-color: #202225;
-      display: flex;
-      flex-direction: column;
+    .message-box {
+      width: 100%;
+      height: 200px;
+      overflow-y: scroll;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
     }
-    .sidebar h2 {
-      padding: 1rem;
-      margin: 0;
-      background-color: #2f3136;
-      border-bottom: 1px solid #444;
-    }
-    .room-list {
-      flex: 1;
-      overflow-y: auto;
-    }
-    .room-item {
-      padding: 1rem;
-      cursor: pointer;
-      border-bottom: 1px solid #444;
-    }
-    .room-item:hover {
-      background-color: #36393f;
-    }
-    .chat-container {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-    .chat-header {
-      padding: 1rem;
-      background-color: #36393f;
-      border-bottom: 1px solid #444;
-    }
-    .chat-messages {
-      flex: 1;
-      padding: 1rem;
-      overflow-y: auto;
-    }
-    .chat-input {
-      display: flex;
-      padding: 1rem;
-      background-color: #40444b;
-    }
-    .chat-input input {
-      flex: 1;
-      padding: 0.5rem;
-      border: none;
-      border-radius: 5px;
-      background-color: #2f3136;
-      color: #fff;
-    }
-    .chat-input button {
-      margin-left: 0.5rem;
-      padding: 0.5rem 1rem;
-      background-color: #7289da;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
+    #sendMessageButton {
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="sidebar">
-    <h2>Rooms</h2>
-    <div class="room-list" id="roomList"></div>
-  </div>
-  <div class="chat-container">
-    <div class="chat-header">
-      <strong id="roomTitle">Welcome</strong>
-    </div>
-    <div class="chat-messages" id="chatMessages"></div>
-    <div class="chat-input">
-      <input type="text" id="messageInput" placeholder="Type a message..." />
-      <button onclick="sendMessage()">Send</button>
-    </div>
-  </div>
+  <h1>Welcome to Discord Web</h1>
+
+  <div id="messageBox" class="message-box"></div>
+  <input type="text" id="messageInput" placeholder="Type a message..." />
+  <button id="sendMessageButton" onclick="sendMessage()">Send Message</button>
 
   <script>
-    let ws;
+    let socket = null;
+    let roomName = "room1";  // Default room name
 
+    // Initialize WebSocket connection
     function initWebSocket() {
-      const socket = new WebSocket('wss://51ca-91-236-132-232.ngrok-free.app/');
+      try {
+        // Make sure the WebSocket URL uses "wss://" for secure connections
+        socket = new WebSocket('wss://51ca-91-236-132-232.ngrok-free.app');
 
-      ws.onmessage = (event) => {
-        const msg = document.createElement("div");
-        msg.textContent = event.data;
-        document.getElementById("chatMessages").appendChild(msg);
-      };
+        socket.onopen = function() {
+          console.log('WebSocket connection established');
+        };
 
-      ws.onopen = () => {
-        console.log("Connected to proxy.");
-      };
+        socket.onmessage = function(event) {
+          const message = event.data;
+          const messageBox = document.getElementById('messageBox');
+          messageBox.innerHTML += `<p>${message}</p>`;
+          messageBox.scrollTop = messageBox.scrollHeight; // Auto scroll to bottom
+        };
 
-      ws.onerror = () => {
-        console.error("WebSocket error.");
-      };
-    }
+        socket.onerror = function(error) {
+          console.error('WebSocket error:', error);
+        };
 
-    function sendMessage() {
-      const input = document.getElementById("messageInput");
-      const msg = input.value;
-      if (msg && ws.readyState === WebSocket.OPEN) {
-        ws.send(msg);
-        input.value = "";
+        socket.onclose = function() {
+          console.log('WebSocket connection closed');
+        };
+      } catch (error) {
+        console.error('Failed to initialize WebSocket:', error);
       }
     }
 
-    window.onload = () => {
+    // Send message function
+    function sendMessage() {
+      const messageInput = document.getElementById('messageInput');
+      const message = messageInput.value;
+
+      if (socket && socket.readyState === WebSocket.OPEN) {
+        socket.send(message);
+        console.log('Sent message:', message);
+        messageInput.value = '';  // Clear input field
+      } else {
+        console.error('WebSocket is not open.');
+      }
+    }
+
+    // On page load, initialize WebSocket
+    window.onload = function() {
       initWebSocket();
     };
   </script>
