--- a/Discord-Web/index.html
+++ b/Discord-Web/index.html
@@ -37,7 +37,7 @@
     function initWebSocket() {
       try {
         // Make sure the WebSocket URL uses "wss://" for secure connections
-        socket = new WebSocket('wss://9b74-91-236-132-232.ngrok-free.app');
+        socket = new WebSocket('wss://51ca-91-236-132-232.ngrok-free.app');
 
         socket.onopen = function() {
           console.log('WebSocket connection established');
